--- a/package.json
+++ b/package.json
@@ -5,18 +5,27 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "favicons": "^6.1.0",
     "gatsby": "^2.23.3",
-    "gatsby-image": "^2.4.7",
+    "gatsby-background-image": "^1.1.1",
+    "gatsby-image": "^2.4.8",
+    "gatsby-link": "^2.4.7",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.4.11",
     "gatsby-plugin-offline": "^3.2.9",
     "gatsby-plugin-react-helmet": "^3.3.4",
+    "gatsby-plugin-sass": "^2.3.5",
     "gatsby-plugin-sharp": "^2.6.11",
     "gatsby-source-filesystem": "^2.3.11",
+    "gatsby-transformer-json": "^2.4.6",
     "gatsby-transformer-sharp": "^2.5.5",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-icons": "^3.10.0",
+    "typography-theme-bootstrap": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "2.0.5"
