--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"favicons": "^6.1.0",
 		"gatsby": "^2.23.3",
 		"gatsby-background-image": "^1.1.1",
+		"gatsby-cli": "^2.12.51",
 		"gatsby-image": "^2.4.8",
 		"gatsby-link": "^2.4.7",
 		"gatsby-plugin-google-fonts": "^1.0.1",
