--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"favicons": "^6.1.0",
 		"gatsby": "^2.23.3",
 		"gatsby-background-image": "^1.1.1",
-		"gatsby-cli": "^2.12.54",
+		"gatsby-cli": "^2.12.58",
 		"gatsby-image": "^2.4.11",
 		"gatsby-link": "^2.4.7",
 		"gatsby-plugin-google-fonts": "^1.0.1",
@@ -18,6 +18,7 @@
 		"gatsby-plugin-react-helmet": "^3.3.4",
 		"gatsby-plugin-sass": "^2.3.5",
 		"gatsby-plugin-sharp": "^2.6.11",
+		"gatsby-plugin-smoothscroll": "^1.1.0",
 		"gatsby-source-filesystem": "^2.3.11",
 		"gatsby-transformer-json": "^2.4.6",
 		"gatsby-transformer-sharp": "^2.5.5",
