Added glowing button to the hero

--- a/data/projects.json
+++ b/data/projects.json
@@ -4,7 +4,7 @@
     "slug": "staincrete",
     "type": "Website Design & Development",
     "description": "README.md",
-    "tags": "['responsive','custom theme', 'SCSS', 'Wordpress','concrete' ]",
+    "tags": "responsive, custom theme, SCSS, Wordpress, concrete ",
     "squareImg": "./images/staincrete-square.jpg",
     "frontImg": "./images/staincrete.jpg",
     "insideImg": "./images/staincrete-showcase.jpg",
@@ -16,7 +16,7 @@
     "slug": "arrow",
     "type": "Website Design & Development",
     "description": "README.md",
-    "tags": "['responsive','custom theme', 'SCSS', 'Wordpress', 'manufacturing']",
+    "tags": "responsive, custom theme, SCSS, Wordpress, manufacturing",
     "squareImg": "./images/arrow-square.jpg",
     "frontImg": "./images/arrow.jpg",
     "insideImg": "./images/arrow-inside.jpg",
@@ -28,7 +28,7 @@
     "slug": "sweetbasil",
     "type": "Website Design & Development",
     "description": "README.md",
-    "tags": "['static','custom design', 'built 2010', 'restuarant']",
+    "tags": "static, custom design, restuarant",
     "squareImg": "./images/sweetbasil-square.jpg",
     "frontImg": "./images/sweetbasil.jpg",
     "insideImg": "",
@@ -40,7 +40,7 @@
     "slug": "aggregate2016",
     "type": "Website Design & Development",
     "description": "README.md",
-    "tags": "['Responsive','Custom Design', 'SCSS', 'Wordpress', 'concrete']",
+    "tags": "Responsive, Custom Design, SCSS, Wordpress, concrete",
     "squareImg": "./images/aggregate2016-square.jpg",
     "frontImg": "./images/aggregate2016.jpg",
     "insideImg": "",
@@ -52,7 +52,7 @@
     "slug": "aggregate2012",
     "type": "Website Design & Development",
     "description": "README.md",
-    "tags": "['Responsive','Custom Design', 'SCSS', 'Wordpress', 'concrete']",
+    "tags": "Responsive, Custom Design, SCSS, Wordpress, concrete",
     "squareImg": "./images/aggregate2012-square.jpg",
     "frontImg": "./images/aggregate2012.jpg",
     "insideImg": "",
@@ -64,9 +64,9 @@
     "slug": "boysinthebarrel",
     "type": "Website Design",
     "description": "README.md",
-    "tags": "['custom design', 'splash', 'band']",
-    "squareImg": "./images/boysinthebarrel-square.jpg",
-    "frontImg": "./images/boysinthebarrel.jpg",
+    "tags": "custom design, splash, band",
+    "squareImg": "./images/boysinbarrel-square.jpg",
+    "frontImg": "./images/boysinbarrel.jpg",
     "insideImg": "",
     "mobileImg": "",
     "hasSite": "false"
@@ -76,7 +76,7 @@
     "slug": "nightingale",
     "type": "Website Design & Development",
     "description": "README.md",
-    "tags": "['responsive','custom design', 'SCSS','restaurant', 'Wordpress', 'Custom Theme']",
+    "tags": "responsive, custom design, SCSS, restaurant, Wordpress, custom theme",
     "squareImg": "./images/nightingale-square.jpg",
     "frontImg": "./images/nightingale.jpg",
     "insideImg": "./images/nightingale-inside.jpg",
@@ -88,7 +88,7 @@
     "slug": "chefjeff",
     "type": "Website Design",
     "description": "README.md",
-    "tags": "[ 'custom design', 'catering', 'splash']",
+    "tags": "custom design, catering, splash",
     "squareImg": "./images/chefjeff-square.jpg",
     "frontImg": "./images/chefjeff.jpg",
     "insideImg": "",
@@ -100,7 +100,7 @@
     "slug": "contractualize",
     "type": "Website Concept",
     "description": "README.md",
-    "tags": "['responsive','concept', 'SCSS','online app', 'Angular']",
+    "tags": "responsive, concept, SCSS, online app, Angular",
     "squareImg": "./images/contractualize-square.jpg",
     "frontImg": "./images/contractualize.jpg",
     "insideImg": "./images/contractualize-inside.jpg",
@@ -112,7 +112,7 @@
     "slug": "jrhoades2017",
     "type": "Website Design/Dev",
     "description": "README.md",
-    "tags": "['responsive','design', 'SCSS', 'development','web', 'custom theme', 'Wordpress']",
+    "tags": "responsive, design, SCSS, development, web, custom theme, 'Wordpress'",
     "squareImg": "./images/jrhoades2017-square.jpg",
     "frontImg": "./images/jrhoades2017.jpg",
     "insideImg": "./images/jrhoades2017-inside.jpg",
@@ -124,7 +124,7 @@
     "slug": "jrhoades2012",
     "type": "Website Design & Development",
     "description": "README.md",
-    "tags": "['responsive','custom theme', 'SCSS','web', 'Wordpress']",
+    "tags": "responsive, custom theme, SCSS, web, Wordpress",
     "squareImg": "./images/jrhoades2012-square.jpg",
     "frontImg": "./images/jrhoades2012.jpg",
     "insideImg": "",
@@ -136,7 +136,7 @@
     "slug": "igi",
     "type": "Website Design & Development",
     "description": "README.md",
-    "tags": "['responsive','custom design', 'SCSS', 'Wordpress','technology', 'Custom Theme']",
+    "tags": "responsive, custom design, SCSS, Wordpress, technology, custom theme",
     "squareImg": "./images/igi-square.jpg",
     "frontImg": "./images/igi.jpg",
     "insideImg": "./images/igi-inside.jpg",
@@ -148,7 +148,7 @@
     "slug": "mnapt",
     "type": "Website Design & Development",
     "description": "README.md",
-    "tags": "['responsive','custom design', 'SCSS','non-profit', 'Wordpress', 'Custom Theme']",
+    "tags": "responsive, custom design, SCSS, non-profit, Wordpress, custom theme",
     "squareImg": "./images/mnapt-square.jpg",
     "frontImg": "./images/mnapt.jpg",
     "insideImg": "./images/mnapt-inside.jpg",
@@ -160,7 +160,7 @@
     "slug": "lyndaleanimalhospital",
     "type": "Website Design",
     "description": "README.md",
-    "tags": "['Retro', 'Custom Design', 'splash', 'pets']",
+    "tags": "Retro, Custom Design, splash, pets",
     "squareImg": "./images/lyndaleanimalhospital-square.jpg",
     "frontImg": "./images/lyndaleanimalhospital.jpg",
     "insideImg": "",
@@ -172,7 +172,7 @@
     "slug": "tablerock",
     "type": "Website Design",
     "description": "README.md",
-    "tags": "['custom design', 'splash', 'real estate']",
+    "tags": "custom design, splash, real estate",
     "squareImg": "./images/tablerock-square.jpg",
     "frontImg": "./images/tablerock.jpg",
     "insideImg": "",
@@ -184,7 +184,7 @@
     "slug": "pdr",
     "type": "Website Design & Development",
     "description": "README.md",
-    "tags": "['construction','responsive','custom design', 'SCSS', 'Wordpress', 'Custom Theme']",
+    "tags": "construction, responsive, custom design, SCSS, Wordpress, custom theme",
     "squareImg": "./images/pdr-square.jpg",
     "frontImg": "./images/pdr.jpg",
     "insideImg": "./images/pdr-inside.jpg",
@@ -196,7 +196,7 @@
     "slug": "liftnstore",
     "type": "Website Design & Development",
     "description": "README.md",
-    "tags": "['responsive','custom design', 'SCSS','sales site', 'Wordpress', 'Custom Theme']",
+    "tags": "responsive, custom design, SCSS, sales site, Wordpress, custom theme",
     "squareImg": "./images/liftnstore-square.jpg",
     "frontImg": "./images/liftnstore.jpg",
     "insideImg": "./images/liftnstore-inside.jpg",
@@ -204,23 +204,11 @@
     "hasSite": "false"
   },
   {
-    "name": "MNAPT",
-    "slug": "mnapt",
-    "type": "Website Design & Development",
-    "description": "README.md",
-    "tags": "['responsive','custom design', 'SCSS','non-profit', 'Wordpress', 'Custom Theme']",
-    "squareImg": "./images/mnapt-square.jpg",
-    "frontImg": "./images/mnapt.jpg",
-    "insideImg": "./images/mnapt-inside.jpg",
-    "mobileImg": "./images/mnapt-mobile.jpg",
-    "hasSite": "true"
-  },
-  {
     "name": "The Gathering Church",
     "slug": "thegathering",
     "type": "Website Design & Development",
     "description": "README.md",
-    "tags": "[ 'custom design', 'church', 'splash']",
+    "tags": "custom design, church, splash",
     "squareImg": "./images/gathering-square.jpg",
     "frontImg": "./images/gathering.jpg",
     "insideImg": "",
@@ -232,7 +220,7 @@
     "slug": "foxhollow",
     "type": "Website Design & Development",
     "description": "README.md",
-    "tags": "['responsive','custom design', 'SCSS','golf course', 'Wordpress', 'Custom Theme']",
+    "tags": "responsive, custom design, SCSS, golf course, Wordpress, custom theme",
     "squareImg": "./images/foxhollow-square.jpg",
     "frontImg": "./images/foxhollow.jpg",
     "insideImg": "",
