--- a/data/projects.json
+++ b/data/projects.json
@@ -3,7 +3,7 @@
 		"name": "Staincrete Decorative Concrete",
 		"slug": "staincrete",
 		"type": "Website Design & Development",
-		"description": "README.md",
+		"description": "Decorative concrete company that wanted a website that could showcase their work.",
 		"tags": "responsive, custom theme, SCSS, Wordpress, concrete ",
 		"squareImg": "./images/staincrete-square.jpg",
 		"frontImg": "./images/staincrete.jpg",
@@ -15,7 +15,7 @@
 		"name": "Arrow Components",
 		"slug": "arrow",
 		"type": "Website Design & Development",
-		"description": "README.md",
+		"description": "Trailer awning and cabinet company in need of a website refresh. Built mobile responsive and with a clean new design. Site is in progress and can be viewed at arrow.drewolsen.dev",
 		"tags": "responsive, custom theme, SCSS, Wordpress, manufacturing",
 		"squareImg": "./images/arrow-square.jpg",
 		"frontImg": "./images/arrow.jpg",
@@ -27,7 +27,7 @@
 		"name": "Sweet Basil Restaurant",
 		"slug": "sweetbasil",
 		"type": "Website Design & Development",
-		"description": "README.md",
+		"description": "Designed and built back in 2011 for a local small business at my very start. Also included food photography that I took of the dishes on the menu to give the website authenticity.",
 		"tags": "static, custom design, restuarant",
 		"squareImg": "./images/sweetbasil-square.jpg",
 		"frontImg": "./images/sweetbasil.jpg",
@@ -39,7 +39,7 @@
 		"name": "Aggregate MN",
 		"slug": "aggregate2016",
 		"type": "Website Design & Development",
-		"description": "README.md",
+		"description": "A redesign of the Aggregate MN website which never made it to completion.",
 		"tags": "Responsive, Custom Design, SCSS, Wordpress, concrete",
 		"squareImg": "./images/aggregate2016-square.jpg",
 		"frontImg": "./images/aggregate2016.jpg",
@@ -51,7 +51,7 @@
 		"name": "Aggregate MN",
 		"slug": "aggregate2012",
 		"type": "Website Design & Development",
-		"description": "README.md",
+		"description": "Initial website I designed for Aggregate MN. Fully responsive and far exceeded the current standard in the local industry at that time.",
 		"tags": "Responsive, Custom Design, SCSS, Wordpress, concrete",
 		"squareImg": "./images/aggregate2012-square.jpg",
 		"frontImg": "./images/aggregate2012.jpg",
@@ -63,7 +63,7 @@
 		"name": "Boys'n the Barrel",
 		"slug": "boysinthebarrel",
 		"type": "Website Design",
-		"description": "README.md",
+		"description": "Splash page I designed for another firm, for a local minnesota band.",
 		"tags": "custom design, splash, band",
 		"squareImg": "./images/boysinbarrel-square.jpg",
 		"frontImg": "./images/boysinbarrel.jpg",
@@ -75,7 +75,7 @@
 		"name": "Nightingale",
 		"slug": "nightingale",
 		"type": "Website Design & Development",
-		"description": "README.md",
+		"description": "I really liked the design of this site and how I integrated design elements from the restaurant itself. Fully responsive and was extremely friendly for the Admin to use and update.",
 		"tags": "responsive, custom design, SCSS, restaurant, Wordpress, custom theme",
 		"squareImg": "./images/nightingale-square.jpg",
 		"frontImg": "./images/nightingale.jpg",
@@ -87,7 +87,7 @@
 		"name": "Chef Jeff Catering",
 		"slug": "chefjeff",
 		"type": "Website Design",
-		"description": "README.md",
+		"description": "Splash page I designed for another firm, for a local minnesota catering company.",
 		"tags": "custom design, catering, splash",
 		"squareImg": "./images/chefjeff-square.jpg",
 		"frontImg": "./images/chefjeff.jpg",
@@ -99,7 +99,7 @@
 		"name": "Jrhoades 2017",
 		"slug": "jrhoades2017",
 		"type": "Website Design/Dev",
-		"description": "README.md",
+		"description": "Redesign of the Jrhoades website in 2015.",
 		"tags": "responsive, design, SCSS, development, web, custom theme, 'Wordpress'",
 		"squareImg": "./images/jrhoades2017-square.jpg",
 		"frontImg": "./images/jrhoades2017.jpg",
@@ -111,7 +111,7 @@
 		"name": "Jrhoades 2012",
 		"slug": "jrhoades2012",
 		"type": "Website Design & Development",
-		"description": "README.md",
+		"description": "Responsive design back in 2012",
 		"tags": "responsive, custom theme, SCSS, web, Wordpress",
 		"squareImg": "./images/jrhoades2012-square.jpg",
 		"frontImg": "./images/jrhoades2012.jpg",
@@ -123,7 +123,7 @@
 		"name": "Infinite Graphics",
 		"slug": "igi",
 		"type": "Website Design & Development",
-		"description": "README.md",
+		"description": "Medium computer/electronics equipment company",
 		"tags": "responsive, custom design, SCSS, Wordpress, technology, custom theme",
 		"squareImg": "./images/igi-square.jpg",
 		"frontImg": "./images/igi.jpg",
@@ -135,7 +135,7 @@
 		"name": "MNAPT",
 		"slug": "mnapt",
 		"type": "Website Design & Development",
-		"description": "README.md",
+		"description": "Minnesota bus association website redesign. Integration with a membership plugin and WooCommerce.",
 		"tags": "responsive, custom design, SCSS, non-profit, Wordpress, custom theme",
 		"squareImg": "./images/mnapt-square.jpg",
 		"frontImg": "./images/mnapt.jpg",
@@ -147,7 +147,7 @@
 		"name": "Lyndale Animal Hospital",
 		"slug": "lyndaleanimalhospital",
 		"type": "Website Design",
-		"description": "README.md",
+		"description": "Splash page I designed for another firm, for a local minnesota veterinary clinic. They are in a retro building and wanted a retro look.",
 		"tags": "Retro, Custom Design, splash, pets",
 		"squareImg": "./images/lyndaleanimalhospital-square.jpg",
 		"frontImg": "./images/lyndaleanimalhospital.jpg",
@@ -159,7 +159,7 @@
 		"name": "Tablerock Land Services",
 		"slug": "tablerock",
 		"type": "Website Design",
-		"description": "README.md",
+		"description": "Splash page I designed for another firm, for a real estate company in the western United States.",
 		"tags": "custom design, splash, real estate",
 		"squareImg": "./images/tablerock-square.jpg",
 		"frontImg": "./images/tablerock.jpg",
@@ -171,7 +171,7 @@
 		"name": "PDR & Remodeling",
 		"slug": "pdr",
 		"type": "Website Design & Development",
-		"description": "README.md",
+		"description": "Local MN Home builder/remodeler needed a website refresh.",
 		"tags": "construction, responsive, custom design, SCSS, Wordpress, custom theme",
 		"squareImg": "./images/pdr-square.jpg",
 		"frontImg": "./images/pdr.jpg",
@@ -207,8 +207,8 @@
 		"name": "Fox Hollow GC",
 		"slug": "foxhollow",
 		"type": "Website Design & Development",
-		"description": "README.md",
-		"tags": "responsive, custom design, SCSS, golf course, Wordpress, custom theme",
+		"description": "Website I designed and built for a local golf course. Non-responsive",
+		"tags": "custom design, SCSS, golf course, Wordpress, custom theme",
 		"squareImg": "./images/foxhollow-square.jpg",
 		"frontImg": "./images/foxhollow.jpg",
 		"insideImg": "",
