--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-helmet": "^6.1.0",
+		"react-hook-form": "^6.1.0",
 		"react-icons": "^3.10.0",
+		"react-scrollspy": "^3.4.3",
 		"typography-theme-bootstrap": "^0.16.19"
 	},
 	"devDependencies": {
