--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"version": "0.1.0",
 	"author": "Drew Olsen <olsenj.andrew@gmail.com>",
 	"dependencies": {
+		"fastclick": "^1.0.6",
 		"favicons": "^6.1.0",
 		"gatsby": "^2.23.3",
 		"gatsby-background-image": "^1.1.1",
